--- a/website/src/app/home/home.component.html
+++ b/website/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class="col-lg-12" style="padding:0px">
   <div class="row col-lg-12 mb-4">
     <div class="col-lg-2"></div>
@@ -13,33 +11,33 @@
     <div class="col-lg-2 "></div>
     <div class="col-md-2 mb-1 text-center">
       <div class="card shadow p-3  bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 1</h5>
-          <h5 class="card-title">XXXXXX</h5>
+        <div class="card-body text-center" style="padding:15px;">
+          <h5 class="card-title">Blocs</h5>
+          <h5 class="card-title">{{totalBlocks}}</h5>
         </div>
       </div>
     </div>
     <div class="col-md-2 mb-1 text-center">
       <div class="card shadow p-3  bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 2</h5>
-          <h5 class="card-title">XXXXXX</h5>
+        <div class="card-body text-center" style="padding:15px;">
+          <h5 class="card-title">Transactions</h5>
+          <h5 class="card-title">{{totalTransaction}}</h5>
         </div>
       </div>
     </div>
     <div class="col-md-2 mb-1 text-center">
       <div class="card shadow p-3  bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 3</h5>
-          <h5 class="card-title">XXXXXX</h5>
+        <div class="card-body text-center" style="padding:15px;">
+          <h5 class="card-title">Transactions minées</h5>
+          <h5 class="card-title">{{totalTransactionMined}}</h5>
         </div>
       </div>
     </div>
     <div class="col-md-2 mb-1 text-center">
-      <div class="card shadow p-3  bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 4</h5>
-          <h5 class="card-title">XXXXXX</h5>
+      <div class="card shadow p-3  bg-white rounded" style="width: 18rem; padding:0px">
+        <div class="card-body text-center" style="padding:15px;">
+          <h5 class="card-title">Transactions non minées</h5>
+          <h5 class="card-title">{{totalTransactionUnMined}}</h5>
         </div>
       </div>
     </div>
@@ -48,17 +46,17 @@
     <div class="col-lg-4 "></div>
     <div class="col-sm-2 mb-1 text-center">
       <div class="card shadow p-3 bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 5</h5>
-          <h5 class="card-title">XXXXXX</h5>
+        <div class="card-body text-center"  style="padding:15px;">
+          <h5 class="card-title">Utilisateurs</h5>
+          <h5 class="card-title">{{totalUsers}}</h5>
         </div>
       </div>
     </div>
     <div class="col-sm-2 mb-1 text-center">
       <div class="card shadow p-3 bg-white rounded" style="width: 18rem;">
-        <div class="card-body text-center">
-          <h5 class="card-title">Info 6</h5>
-          <h5 class="card-title">XXXXXX</h5>
+        <div class="card-body text-center"  style="padding:15px;">
+          <h5 class="card-title">Valeur</h5>
+          <h5 class="card-title">20 000 Eur</h5>
         </div>
       </div>
     </div>
@@ -66,56 +64,128 @@
   </div>  
   <div class="row col-lg-12" style="background-color:white; width:100%; padding:0px; margin:0px">
     <div class="col-lg-2" style="padding:0px"></div>
-    <table id="table" class="table table-striped  table-sm col-lg-8 shadow-lg" style="margin-top:1em; border-radius: 5px 5px;">       
-      <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">       
-        <tr>
-          <th scope="col" style="border-top: 0px; padding:0px; color:white; max-width:3em;">
-            <div class="row" style="margin-left:10px">
-              <div class="btn-group btn-group-toggle" style="margin:5px;background-color:#00285c; width:auto" data-toggle="buttons">
-                <label>
-                  <button class="btn btn-info active" (click)="getTransactions()" name="options" id="option1" autocomplete="off"> Transactions </button>
-                </label>
-                <label>
-                  <button class="btn btn-info active" (click)="getTransactions()" name="options" id="option1" autocomplete="off"> Blocs </button>
-                </label>
-                <label>
-                  <button class="btn btn-info active" (click)="getTransactions()" name="options" id="option1" autocomplete="off"> Noeuds </button>
-                </label>
-              </div>
-            </div>
-            <div class="row" style="margin-left:1em">
-              <span>Id</span>
-            </div>
-          </th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Minée</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Message</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id receveur</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id lanceur</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Timestamp</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let t of tableInfo">
-          <th class="text-center" scope="row">{{t.id}}</th>
-          <td class="text-center">{{t.mined}}</td>
-          <td class="text-center">{{t.message.substring(0,20)}}...</td>
-          <td class="text-center">{{t.receiverId}}</td>
-          <td class="text-center">{{t.senderId}}</td>
-          <td class="text-center">{{t.timestamp}}</td>
-        </tr> 
-      </tbody>
-    </table>
+    <div class="col-lg-8">
+      <div class="row col-lg-12 rounded-top" style="margin-left:10px;min-width:619px; background-color:#00285c; padding:0px; margin:0px;">
+        <div class="btn-group btn-group-toggle" style="margin:5px;background-color:#00285c; width:auto" data-toggle="buttons">
+          <label>
+            <button class="btn btn-info active" (click)="getTransactions()" autocomplete="off"> Transactions </button>
+          </label>
+          <label>
+            <button class="btn btn-info active" (click)="getBlocks()" autocomplete="off"> Blocs </button>
+          </label>
+          <label>
+            <button class="btn btn-info active" (click)="getNodes()" autocomplete="off"> Noeuds </button>
+          </label>
+          <label>
+            <button class="btn btn-info active" (click)="getWallets()" autocomplete="off"> Wallets </button>
+          </label>
+        </div>
+      </div>
+      <table *ngIf="showTransaction == true" id="table" class="table table-striped  table-sm col-lg-12 shadow-lg" style="margin-top:0px; border-radius: 5px 5px;">
+        <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">
+          <tr>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px; max-width:3em;">Id</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Minée</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Message</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id receveur</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id lanceur</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Timestamp</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let t of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
+            <th class="text-center" scope="row">{{t.id}}</th>
+            <td class="text-center">{{t.mined}}</td>
+            <td class="text-center">{{t.message.substring(0,40)}}...</td>
+            <td class="text-center">{{t.receiverId}}</td>
+            <td class="text-center">{{t.senderId}}</td>
+            <td class="text-center">{{t.timestamp}}</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <ul class="pagination col-lg-12">
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          </ul>
+        </tfoot>
+      </table>
+
+      <table *ngIf="showBlock == true" id="table" class="table table-striped  table-sm col-lg-12 shadow-lg" style="margin-top:0px; border-radius: 5px 5px;">
+        <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">
+          <tr>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Hash précédent</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Hash</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Nonce</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">total transactions</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Timestamp</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let t of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
+            <th class="text-center" scope="row">{{t.id}}</th>
+            <td class="text-center">{{t.prevHash.substring(0,20)}}...</td>
+            <td class="text-center">{{t.hash.substring(0,20)}}...</td>
+            <td class="text-center">{{t.nonce}}</td>
+            <td class="text-center">{{t.transactionsCount}}</td>
+            <td class="text-center">{{t.timestamp}}</td>
+            <td class="text-center"><button class="btn btn-info" (click)="blockDetail(t.id)">Lire</button></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <ul class="pagination col-lg-12">
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          </ul>
+        </tfoot>
+        
+      </table>
+
+      <table *ngIf="showNode == true" id="table" class="table table-striped  table-sm col-lg-12 shadow-lg" style="margin-top:0px; border-radius: 5px 5px;">
+        <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">
+          <tr>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Adresse</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Port</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let t of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
+            <th class="text-center" scope="row">{{t.host}}</th>
+            <td class="text-center">{{t.port}}</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <ul class="pagination col-lg-12">
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          </ul>
+        </tfoot>
+      </table>
+
+      <table *ngIf="showWallet == true" id="table" class="table table-striped  table-sm col-lg-12 shadow-lg" style="margin-top:0px; border-radius: 5px 5px;">
+        <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">
+          <tr>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Nom</th>
+            <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">mail</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let w of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
+            <th class="text-center">{{w.id}}</th>
+            <td class="text-center">{{w.name}}</td>
+            <th class="text-center">{{w.mail}}</th>
+          </tr>
+        </tbody>
+        <tfoot>
+          <ul class="pagination col-lg-12">
+            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          </ul>
+        </tfoot>
+      </table>
+    </div>
     <div class="col-lg-2"></div>
   </div>
 
 </div>
-
-<script type="text/javascript">
-
-  $(document).ready(function() {
-    $('#table').DataTable();
-} );
-</script>
 
 
 
