--- a/website/src/app/nav-menu/nav-menu.component.html
+++ b/website/src/app/nav-menu/nav-menu.component.html
@@ -4,7 +4,8 @@
     <div class="container">
       <div class="row col-lg-12">
         <a class="navbar-brand text-light" (click)="home()" style="font-weight: 800; font-size:2em; height:40px;margin-right:5px; line-height:15px">SUPBANK</a>
-        <span class="fab fa-bitcoin fa-2x text-light" id="basic-addon1"></span>
+        <!--<span class="fab fa-bitcoin fa-2x text-light" id="basic-addon1"></span>-->
+        <img src="../../assets/facebook_profile_image.png" class="rounded " style="width: 2em;height: 2em; " />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
                 [attr.aria-expanded]="isExpanded" (click)="toggle()">
           <span class="navbar-toggler-icon"></span>
@@ -63,24 +64,24 @@
     <div class="col-lg-2" style="padding:0px"></div>
     <table id="table" class="table table-striped  table-sm col-lg-8 shadow-lg" style="margin-top:0px; border-radius: 5px 5px;">
       <thead style="background-color:#00285c; border-top-left-radius: 40px 40px;">
-        <tr>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px; max-width:3em;">Id</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Minée</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Message</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id receveur</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id lanceur</th>
-          <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Timestamp</th>
-        </tr>
+      <tr>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px; max-width:3em;">Id</th>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Minée</th>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Message</th>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id receveur</th>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Id lanceur</th>
+        <th class="text-center" scope="col" style="border-top: 0px;color:white; padding-bottom:0px">Timestamp</th>
+      </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let t of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
-          <th class="text-center" scope="row">{{t.id}}</th>
-          <td class="text-center">{{t.mined}}</td>
-          <td class="text-center">{{t.message.substring(0,40)}}...</td>
-          <td class="text-center">{{t.receiverId}}</td>
-          <td class="text-center">{{t.senderId}}</td>
-          <td class="text-center">{{t.timestamp}}</td>
-        </tr>
+      <tr *ngFor="let t of tableInfo | paginate: { itemsPerPage: 10, currentPage: p }">
+        <th class="text-center" scope="row">{{t.id}}</th>
+        <td class="text-center">{{t.mined}}</td>
+        <td class="text-center">{{t.message.substring(0,40)}}...</td>
+        <td class="text-center">{{t.receiverId}}</td>
+        <td class="text-center">{{t.senderId}}</td>
+        <td class="text-center">{{t.timestamp}}</td>
+      </tr>
       </tbody>
       <ul class="pagination">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
@@ -103,12 +104,14 @@
             <!-- Form -->
             <form class="text-center" [formGroup]="contactForm" (ngSubmit)=" logIn()" style="color: #757575;">
 
+              Merci de rentrer votre addresse mail si vous l'avez renseignez lors de votre inscription, sinon le nom de votre wallet.
+
               <!-- Email -->
-                <input type="email" formControlName="email" id="materialLoginFormEmail" placeholder="@" class="form-control"  required>
-                
+              <input type="email" formControlName="email" id="materialLoginFormEmail" placeholder="Mail" class="form-control"  required>
+
               <p>ou</p>
               <!-- Password -->
-                <input type="text"formControlName="name" id="materialLoginFormPassword" placeholder="Nom" class="form-control">
+              <input type="text"formControlName="name" id="materialLoginFormPassword" placeholder="Nom" class="form-control">
 
               <div class="d-flex justify-content-around">
 
@@ -155,12 +158,12 @@
 
               <!-- Email -->
 
-                <input type="email" formControlName="email" id="materialLoginFormEmailRegister" class="form-control">
-                <label for="materialLoginFormEmailRegister" style="color:#1a3c69">E-mail&nbsp;<span class="fas fa-at" id="basic-addon1" style="color:#1a3c69"></span></label>
+              <input type="email" formControlName="email" id="materialLoginFormEmailRegister" class="form-control">
+              <label for="materialLoginFormEmailRegister" style="color:#1a3c69">E-mail&nbsp;<span class="fas fa-at" id="basic-addon1" style="color:#1a3c69"></span></label>
 
               <!-- Password -->
-                <input type="text" formControlName="name" id="materialLoginFormPasswordRegister" class="form-control">
-                <label for="materialLoginFormPasswordRegister">Nom&nbsp;<span class="fas fa-key" id="basic-addon1" style="color:#1a3c69"></span></label>
+              <input type="text" formControlName="name" id="materialLoginFormPasswordRegister" class="form-control">
+              <label for="materialLoginFormPasswordRegister">Nom&nbsp;<span class="fas fa-key" id="basic-addon1" style="color:#1a3c69"></span></label>
 
               <div class="d-flex justify-content-around">
 
